[package]
name = "krustie"
version = "0.3.0"
description = "Krustie is a simple and easy-to-use backend framework."
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http", "web", "framework"]
homepage = "https://github.com/emrecancorapci/krustie"
repository = "https://github.com/emrecancorapci/krustie"
authors = ["Emre Can Corapci"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
flate2 = "1.0.35"
tokio = { version = "1.43", features = ["full"] }

